<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Back</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="call_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="shareLink">http://practicum.yandex.ru</string>
    <string name="messageSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subjectSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="fromAddressSupport">xxxxxvic@yandex.ru</string>
    <string name="userAgreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="notFound">Ничего не нашлось</string>
    <string name="techError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="historySearch">Вы искали</string>
    <string name="add_to_play_list">Add to play list</string>
    <string name="play">Play</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="emailMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailFromAddress">xxxxxvic@yandex.ru</string>
    <string name="media_str">Медиатека</string>
    <string name="favorites_str">Избранные треки</string>
    <string name="playlist_str">Плейлисты</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="bottomSearchNav">Поиск</string>
    <string name="bottomMediaNav">Медиатека</string>
    <string name="bottomSettingsNav">Настройки</string>
    <string name="new_playlist_fragment">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_button">Создать</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="playlist_end">Завершить создание плейлиста?</string>
    <string name="all_resources_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="no_tracks_in_playlist">В этом плейслисте нет ни одного трека</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="no_tracks_in_playlist_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="wanttodeletetrack">Хотите удалить трек?</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_edit">Редактирование плейлиста</string>
    <string name="save">Сохранить</string>

    <plurals name="plurals_min">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>


    <plurals name="plurals_tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>