<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="28dp"
            android:paddingBottom="44dp"
            android:src="@drawable/back_svg"
            android:contentDescription="@string/back"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="44dp"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            android:fontFamily="@font/ys_font"
            android:textFontWeight="500"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixtyOneDP"
        android:orientation="horizontal"
        android:paddingEnd="18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteenDP"
            android:textStyle="normal"
            android:fontFamily="@font/ys_font"
            android:textFontWeight="400"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixtyOneDP"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/share_application"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteenDP"
            android:textStyle="normal"
            android:fontFamily="@font/ys_font"
            android:textFontWeight="400"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/share_svg"
            app:iconGravity="end"
            app:iconTint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixtyOneDP"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/call_support"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteenDP"
            android:textStyle="normal"
            android:fontFamily="@font/ys_font"
            android:textFontWeight="400"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/support_svg"
            app:iconGravity="end"
            app:iconTint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixtyOneDP"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteenDP"
            android:textStyle="normal"
            android:fontFamily="@font/ys_font"
            android:textFontWeight="400"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/user_license"
            app:iconGravity="end"
            app:iconTint="@color/gray" />
    </LinearLayout>

</LinearLayout>