<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settingsBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.settings.fragment.SettingsFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/dayNightTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_font"
            android:gravity="center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="44dp"
            android:layout_marginLeft="12dp"
            android:text="@string/settings"
            android:textFontWeight="500"
            android:textSize="22sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="18dp">

        <TextView
            android:id="@+id/blackThemeView"
            style="@style/settingMenuElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/sixteenDP"
            android:layout_weight="1"
            android:text="@string/black_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/shareView"
            style="@style/settingMenuElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/sixteenDP"
            android:layout_weight="1"
            android:text="@string/share_application" />

        <Button
            android:id="@+id/share"
            style="@style/settingsButton"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/share_svg"
            app:iconGravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/supportView"
            style="@style/settingMenuElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/sixteenDP"
            android:layout_weight="1"
            android:text="@string/call_support" />

        <Button
            android:id="@+id/sendToSupport"
            style="@style/settingsButton"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/support_svg"
            app:iconGravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/userAgreementView"
            style="@style/settingMenuElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/sixteenDP"
            android:layout_weight="1"
            android:text="@string/user_agreement" />

        <Button
            android:id="@+id/viewUserAgreement"
            style="@style/settingsButton"
            android:layout_width="@dimen/fortyEightDP"
            android:layout_height="@dimen/fortyEightDP"
            android:layout_gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/user_license"
            app:iconGravity="end" />
    </LinearLayout>

</LinearLayout>