<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settingsBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.search.fragment.SearchFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            style="@style/dayNightTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_font"
            android:text="@string/search"
            android:layout_marginLeft="12dp"
            android:textFontWeight="500"
            android:textSize="22sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        style="@style/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteenDP"
        android:background="@drawable/rounded_edit_text"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/searchEditText"
            style="@style/searchEditText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:paddingLeft="@dimen/sixteenDP"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor"
            />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="12dp"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_margin="140dp"
        android:indeterminateTint="@color/_3772e7"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/technicalError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="80dp"
        android:src="@drawable/technical_error"
        android:visibility="gone" />

    <TextView
        android:id="@+id/technicalErrorText"
        style="@style/searchResultMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_font"
        android:gravity="center"
        android:paddingTop="12dp"
        android:text="@string/techError"
        android:textSize="19sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/technicalErrorButton"
        style="@style/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_font"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:visibility="gone"
        app:cornerRadius="54dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchHistoryText"
            style="@style/searchResultMain"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/ys_font"
            android:gravity="center"
            android:text="@string/historySearch"
            android:textFontWeight="500"
            android:textSize="19sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_font"
            android:text="@string/clearHistory"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>